<resources>
    <string name="app_name">Viathan Engineering App</string>

    <string name="welcome"> Welcome to </string>
    <string name="viathan"> Viathan </string>
    <string name="engineering"> Engineering </string>
    <string name="sign_in"> Sign In </string>
    <string name="sign_up_text"> Don\'t have an account? </string>
    <string name="sign_up"> Sign Up </string>

    <!--SIGN IN SCREEN -->
    <string name="email"> Email </string>
    <string name="password"> Password </string>
    <string name="log_in"> Log In </string>
    <string name="forgot_password"> Forget Password? </string>
</resources>