<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:layout_marginTop="40dp"
        android:src="@drawable/viathan_logo"/>

    <TextView
        android:id="@+id/viathan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/viathan"/>

    <TextView
        android:id="@+id/engineering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/viathan"
        android:fontFamily="@font/roboto"
        android:text="@string/engineering"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/engineering"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/sign_up_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_up"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>