<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_baseline_arrow_back"/>

    <TextView
        android:id="@+id/sign_in_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        android:layout_marginTop="40dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:text="@string/sign_in"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_txt"
        android:layout_marginTop="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="50dp"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="#A49F9F"
        android:hint="@string/email"
        android:drawablePadding="12dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="50dp"
        android:drawableStart="@drawable/ic_baseline_eye"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="#A49F9F"
        android:hint="@string/password"
        android:drawablePadding="12dp"/>

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_bg"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/log_in"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:textColor="#002147"
        android:textSize="20sp"
        android:text="@string/forgot_password"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>